log/build_2021-10-14_21-59-44/publisher3431/stderr.log
  File "/home/rsa2021/cpp_pub_sub/install/publisher3431/lib/python3.8/site-packages/publisher3431/publisher.py", line 11
    rospy.loginfo("Publishing points')
                                     ^
SyntaxError: EOL while scanning string literal

